<resources>
    <string name="app_name">Infinity ToDo</string>
    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_save">Save</string>
    <string name="alert_cancel">Do you want to return to main screen?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcomeMsg">Welcome to Infinity ToDo Application</string>
    <string name="loginMsg">Please Login to Infinity ToDo Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="status">Task Status (Check if completed)</string>
    <string name="alert_logout">Do you want to Log out?</string>
    <string name="logout">Log Out</string>
    <string name="errorTitleMsg">Please Enter Title for the Task!</string>
    <string name="errorDateMsg">Please Select Date for the Task!</string>
    <string name="errorPriorityMsg">Select Priority for the Task!</string>
    <string name="todoSavedMsg">Todo Task has been Saved!</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="errorEnterUsername">Please Enter Your Username!</string>
    <string name="errorEnterPassword">Please Enter Your Password!</string>
    <string name="invalidCredentials">Invalid Login Credentials!! Please Enter Valid Username and Password!</string>
    <string name="menu_DeleteCompleted">Delete Completed</string>
    <string name="menu_DeleteAll">Delete All</string>
    <string name="deleteCompletedMsg">Do you want to delete all completed tasks?</string>
    <string name="deleteAllMsg">Do you want to delete all tasks?</string>
    <string name="deleteTask">Do you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="completedTask">Completed Task!</string>
    <string name="onGoingTask">On Going Task!</string>
</resources>