<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="50dp"
    android:layout_marginRight="25dp"
    android:orientation="vertical"
    tools:context=".EditTodoFragment">

    <ImageView
        android:id="@+id/imgView_edit_todo_logo"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/infinity_todo_logo" />

    <EditText
        android:id="@+id/txtName_edit_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:fontFamily="@font/lato_bold"
        android:hint="@string/edit_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtName_edit_todo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:height="150dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/edit_description"
        android:inputType="textMultiLine|textPersonName"
        android:lines="5"
        android:maxLines="5"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/txtName_edit_todo_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/edit_date"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/edit_fragment_rg_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_edit_todo_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_high"
            android:fontFamily="@font/lato_bold"
            android:text="@string/edit_high" />

        <RadioButton
            android:id="@+id/rb_edit_todo_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_medium"
            android:fontFamily="@font/lato_bold"
            android:text="@string/edit_medium" />

        <RadioButton
            android:id="@+id/rb_edit_todo_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_low"
            android:fontFamily="@font/lato_bold"
            android:text="@string/edit_low" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/chk__edit_todo_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/status" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit_todo_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:text="@string/edit_save" />

        <Button
            android:id="@+id/btn_edit_todo_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_bold"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>