<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgView_login_logo"
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="35dp"
        app:srcCompat="@drawable/infinity_login_logo" />

    <TextView
        android:id="@+id/txtView_login_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/loginMsg"
        android:textColor="@color/purple_700"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtView_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/purple_700" />

    <EditText
        android:id="@+id/plntxt_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textColor="@color/purple_700" />

    <TextView
        android:id="@+id/txtView_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/purple_700" />

    <EditText
        android:id="@+id/plntxt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:inputType="textPersonName|textPassword"
        android:textColor="@color/purple_700" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/lato_bold"
        android:text="@string/login" />

</LinearLayout>